Correct `case_when()` syntax

--- a/vignettes/Data_visualisation.Rmd
+++ b/vignettes/Data_visualisation.Rmd
@@ -146,38 +146,38 @@ wind_dat <-
    ) %>%
    mutate(
       wind_direction_degrees = case_when(
-         wind_direction == N ~ 1,
-         wind_direction == NbE ~ 2,
-         wind_direction ==  NNE ~ 3,
-         wind_direction ==  NEbN ~ 4,
-         wind_direction ==   NE ~ 5,
-         wind_direction ==  NEbE ~ 6,
-         wind_direction ==  ENE ~ 7,
-         wind_direction ==  EbN ~ 8,
-         wind_direction ==  E ~ 9,
-         wind_direction ==   EbS ~ 10,
-         wind_direction ==   ESE ~ 11,
-         wind_direction ==    SEbE ~ 12,
-         wind_direction ==    SE ~ 13,
-         wind_direction ==    SEbS ~ 14,
-         wind_direction ==     SSE ~ 15,
-         wind_direction ==       SbE ~ 16,
-         wind_direction ==      S ~ 17,
-         wind_direction ==       SbW ~ 18,
-         wind_direction ==        SSW ~ 19,
-         wind_direction ==       SWbS ~ 20,
-         wind_direction ==       SW ~ 21,
-         wind_direction ==       SWbW ~ 22,
-         wind_direction ==      WSW ~ 23,
-         wind_direction ==      WbS ~ 24,
-         wind_direction ==       W ~ 25,
-         wind_direction ==        WbN ~ 26,
-         wind_direction ==        WNW ~ 27,
-         wind_direction ==        NWbW ~ 28,
-         wind_direction ==         NW ~ 29,
-         wind_direction ==         NWbN ~ 30,
-         wind_direction ==         NNW ~ 31,
-         wind_direction ==         NbW ~ 32
+         wind_direction == "N" ~ 1,
+         wind_direction == "NbE" ~ 2,
+         wind_direction == "NNE" ~ 3,
+         wind_direction == "NEbN" ~ 4,
+         wind_direction == "NE" ~ 5,
+         wind_direction == "NEbE" ~ 6,
+         wind_direction == "ENE" ~ 7,
+         wind_direction == "EbN" ~ 8,
+         wind_direction == "E" ~ 9,
+         wind_direction == "EbS" ~ 10,
+         wind_direction == "ESE" ~ 11,
+         wind_direction == "SEbE" ~ 12,
+         wind_direction == "SE" ~ 13,
+         wind_direction == "SEbS" ~ 14,
+         wind_direction == "SSE" ~ 15,
+         wind_direction == "SbE" ~ 16,
+         wind_direction == "S" ~ 17,
+         wind_direction == "SbW" ~ 18,
+         wind_direction == "SSW" ~ 19,
+         wind_direction == "SWbS" ~ 20,
+         wind_direction == "SW" ~ 21,
+         wind_direction == "SWbW" ~ 22,
+         wind_direction == "WSW" ~ 23,
+         wind_direction == "WbS" ~ 24,
+         wind_direction == "W" ~ 25,
+         wind_direction == "WbN" ~ 26,
+         wind_direction == "WNW" ~ 27,
+         wind_direction == "NWbW" ~ 28,
+         wind_direction == "NW" ~ 29,
+         wind_direction == "NWbN" ~ 30,
+         wind_direction == "NNW" ~ 31,
+         wind_direction == "NbW" ~ 32
       )
    )
 
