--- a/vignettes/Data_visualisation.Rmd
+++ b/vignettes/Data_visualisation.Rmd
@@ -146,40 +146,43 @@ wind_dat <-
    ) %>%
    mutate(
       wind_direction_degrees = case_when(
-         wind_direction == "N" ~ 0,
-         wind_direction == "NbE" ~ 11.25,
-         wind_direction == "NNE" ~ 22.5,
-         wind_direction == "NEbN" ~ 33.75,
-         wind_direction == "NE" ~ 45,
-         wind_direction == "NEbE" ~ 56.25,
-         wind_direction == "ENE" ~ 67.5,
-         wind_direction == "EbN" ~ 73.5,
-         wind_direction == "E" ~ 90,
-         wind_direction == "EbS" ~ 101.2,
-         wind_direction == "ESE" ~ 112.5,
-         wind_direction == "SEbE" ~ 123.8,
-         wind_direction == "SE" ~ 135.1,
-         wind_direction == "SEbS" ~ 146.3,
-         wind_direction == "SSE" ~ 157.6,
-         wind_direction == "SbE" ~ 168.8,
-         wind_direction == "S" ~ 180,
-         wind_direction == "SbW" ~ 191.2,
-         wind_direction == "SSW" ~ 202.5,
-         wind_direction == "SWbS" ~ 213.8,
-         wind_direction == "SW" ~ 225,
-         wind_direction == "SWbW" ~ 236.2,
-         wind_direction == "WSW" ~ 247.5,
-         wind_direction == "WbS" ~ 258.8,
-         wind_direction == "W" ~ 270,
-         wind_direction == "WbN" ~ 281.2,
-         wind_direction == "WNW" ~ 292.5,
-         wind_direction == "NWbW" ~ 303.8,
-         wind_direction == "NW" ~ 315,
-         wind_direction == "NWbN" ~ 326.2,
-         wind_direction == "NNW" ~ 337.5,
-         wind_direction == "NbW" ~ 348.8
+         wind_direction == "N" ~ "0",
+         wind_direction == "NbE" ~ "11.25",
+         wind_direction == "NNE" ~ "22.5",
+         wind_direction == "NEbN" ~ "33.75",
+         wind_direction == "NE" ~ "45",
+         wind_direction == "NEbE" ~ "56.25",
+         wind_direction == "ENE" ~ "67.5",
+         wind_direction == "EbN" ~ "73.5",
+         wind_direction == "E" ~ "90",
+         wind_direction == "EbS" ~ "101.2",
+         wind_direction == "ESE" ~ "112.5",
+         wind_direction == "SEbE" ~ "123.8",
+         wind_direction == "SE" ~ "135.1",
+         wind_direction == "SEbS" ~ "146.3",
+         wind_direction == "SSE" ~ "157.6",
+         wind_direction == "SbE" ~ "168.8",
+         wind_direction == "S" ~ "180",
+         wind_direction == "SbW" ~ "191.2",
+         wind_direction == "SSW" ~ "202.5",
+         wind_direction == "SWbS" ~ "213.8",
+         wind_direction == "SW" ~ "225",
+         wind_direction == "SWbW" ~ "236.2",
+         wind_direction == "WSW" ~ "247.5",
+         wind_direction == "WbS" ~ "258.8",
+         wind_direction == "W" ~ "270",
+         wind_direction == "WbN" ~ "281.2",
+         wind_direction == "WNW" ~ "292.5",
+         wind_direction == "NWbW" ~ "303.8",
+         wind_direction == "NW" ~ "315",
+         wind_direction == "NWbN" ~ "326.2",
+         wind_direction == "NNW" ~ "337.5",
+         wind_direction == "NbW" ~ "348.8",
+         TRUE ~ wind_direction
       )
-   )
+   ) %>% 
+   mutate(wind_direction_degrees = as.numeric(wind_direction_degrees))
 
+summary(wind_dat)
 ```
 
