--- a/vignettes/Data_visualisation.Rmd
+++ b/vignettes/Data_visualisation.Rmd
@@ -58,13 +58,10 @@ library("clifro")
 library("viridis")
 library("ggpubr")
 library("here")
-library("ChickpeaAscoDispersal")
 ```
 
 
 ## Import data
-
-Spreadsheet-1 of `SpatioTemporalSpreadData.xlsx` has temporal spread data, spreadsheet-2 has spatial spread data and spreadsheet-3 has both combined with an extra column `spread_type` indicating spatial and temporal spread.
 
 ```{r import-data}
 dat <-
@@ -130,7 +127,8 @@ ggplot(dat, aes(incidence)) +
 ggplot(
    data = dat,
    mapping = aes(x = assessment_date, y = incidence),
-   colour = usq_cols("usq charcoal")) +
+   colour = usq_cols("usq charcoal")
+) +
    geom_pointrange(
       stat = "summary",
       fun.min = min,
@@ -147,6 +145,16 @@ ggplot(
    xlab("Assessment Date") +
    ylab("Disease Incidence") +
    theme_usq()
+
+ggsave(here::here("man", "figures/Fig1.png"))
+ggsave(here::here("man", "figures/Fig1.eps"))
+extrafont::embed_fonts(
+   file = here::here("man",
+                     "figures/Fig1.eps"),
+   outfile = here::here("man",
+                        "figures/Fig1.eps"),
+   options = "-dEPSCrop"
+)
 ```
 
 
@@ -252,25 +260,72 @@ pw +
    xlab("") +
    theme_pubclean()
 
-ggsave(here::here("man", "figures/Fig4.png"))
-ggsave(here::here("man", "figures/Fig4.eps"))
+ggsave(here::here("man", "figures/Fig3.png"))
+ggsave(here::here("man", "figures/Fig3.eps"))
 extrafont::embed_fonts(
    file = here::here("man",
-                     "figures/Fig4.eps"),
+                     "figures/Fig3.eps"),
    outfile = here::here("man",
-                        "figures/Fig4.eps"),
+                        "figures/Fig3.eps"),
    options = "-dEPSCrop")
 ```
 
-## Heat map
+## Heat map 
 
 ```{r plot-heat-map}
-ggplot (dat, aes(assessment_date, incidence, fill=incidence)) +
-   geom_tile(length=5000, width=5000) +
-   xlab("Assessment date") +
-   ylab("Disease incidence") +
-   facet_wrap(facets = vars(distance), ncol = 1) +
-   scale_fill_gradient(low = "green", high = "red")
-```
+dat <-
+   read_excel(
+      system.file("extdata", "SpatioTemporalSpreadData.xlsx",
+                  package = "spatiotemporaldynamics"),
+      sheet = 1
+   )
 
+dat <-
+  dat %>%
+  mutate(
+    x = case_when(
+      direction == "North" ~ 0,
+      direction == "East" ~ distance,
+      direction == "South" ~ 0,
+      direction == "West" ~ distance * -1,
+      
+      direction == "NorthEast" ~ distance,
+      direction == "NorthWest" ~ distance * -1,
+      
+      direction == "SouthEast" ~ distance,
+      direction == "SouthWest" ~ distance * -1,
+      TRUE ~ 0
+    )
+  ) %>%
+  mutate(
+    y = case_when(
+      direction == "North" ~ distance,
+      direction == "East" ~ 0,
+      direction == "South" ~ distance * -1,
+      direction == "West" ~ 0,
+      
+      direction == "NorthEast" ~ distance,
+      direction == "NorthWest" ~ distance,
+      
+      direction == "SouthEast" ~ distance * -1,
+      direction == "SouthWest" ~ distance * -1,
+      TRUE ~ 0
+    )
+  )
+
+ggplot(dat, aes(x = x, y = y)) +
+  geom_tile(aes(fill = incidence)) +
+  facet_wrap(. ~ assessment_number + location)
+
+ggsave(here::here("man", "figures/Fig2.png"))
+ggsave(here::here("man", "figures/Fig2.eps"))
+extrafont::embed_fonts(
+   file = here::here("man",
+                     "figures/Fig2.eps"),
+   outfile = here::here("man",
+                        "figures/Fig2.eps"),
+   options = "-dEPSCrop"
+)
+
+```
 
