--- a/vignettes/Data_visualisation.Rmd
+++ b/vignettes/Data_visualisation.Rmd
@@ -173,77 +173,6 @@ ggplot(dat, aes(assessment_date, incidence)) +
    theme_pubclean(base_family = "Arial Unicode MS")
 ```
 
-
-## Wind rose
-
-### Import wind direction data and covert wind direction from text to degrees
-
-```{r convert-text-to-degrees}
-wind_direc_dat <-
-   read_excel(
-      system.file("extdata", "WindDirectionData.xlsx",
-                  package = "spatiotemporaldynamics"),
-      sheet = 1
-   ) %>%
-   mutate(
-      wind_direction_degrees = case_when(
-         wind_direction == "N" ~ "0",
-         wind_direction == "NbE" ~ "11.25",
-         wind_direction == "NNE" ~ "22.5",
-         wind_direction == "NEbN" ~ "33.75",
-         wind_direction == "NE" ~ "45",
-         wind_direction == "NEbE" ~ "56.25",
-         wind_direction == "ENE" ~ "67.5",
-         wind_direction == "EbN" ~ "73.5",
-         wind_direction == "E" ~ "90",
-         wind_direction == "EbS" ~ "101.2",
-         wind_direction == "ESE" ~ "112.5",
-         wind_direction == "SEbE" ~ "123.8",
-         wind_direction == "SE" ~ "135.1",
-         wind_direction == "SEbS" ~ "146.3",
-         wind_direction == "SSE" ~ "157.6",
-         wind_direction == "SbE" ~ "168.8",
-         wind_direction == "S" ~ "180",
-         wind_direction == "SbW" ~ "191.2",
-         wind_direction == "SSW" ~ "202.5",
-         wind_direction == "SWbS" ~ "213.8",
-         wind_direction == "SW" ~ "225",
-         wind_direction == "SWbW" ~ "236.2",
-         wind_direction == "WSW" ~ "247.5",
-         wind_direction == "WbS" ~ "258.8",
-         wind_direction == "W" ~ "270",
-         wind_direction == "WbN" ~ "281.2",
-         wind_direction == "WNW" ~ "292.5",
-         wind_direction == "NWbW" ~ "303.8",
-         wind_direction == "NW" ~ "315",
-         wind_direction == "NWbN" ~ "326.2",
-         wind_direction == "NNW" ~ "337.5",
-         wind_direction == "NbW" ~ "348.8",
-         TRUE ~ wind_direction
-      )
-   ) %>%
-   mutate(wind_direction_degrees = as.numeric(wind_direction_degrees)) %>%
-   rename(date = Date, location = Location)
-save(wind_direc_dat, file = "../data/wind_direc_dat.rda")
-
-```
-
-### Join wind speed and wind direction data 
-
-```{r join-data}
-# Import wind speed data
-wind_speed_dat <-
-   read_excel(
-      system.file("extdata", "WindSpeedData.xlsx",
-                  package = "spatiotemporaldynamics"),
-      sheet = 1
-   ) 
-   
-   ### Join wind speed and wind direction data
-   wind_dat <- left_join(wind_speed_dat, wind_direc_dat) %>%
-   select(-date, -wind_direction)
-```
-
 ## Heat map of disease incidence in quadrats
 
 ```{r plot-heat-map, warning=FALSE}
@@ -324,8 +253,78 @@ dev.off()
 ```
 
 
+## Wind rose
 
-### Plot a wind rose
+
+### Import wind direction data and covert wind direction from text to degrees
+
+```{r convert-text-to-degrees}
+wind_direc_dat <-
+   read_excel(
+      system.file("extdata", "WindDirectionData.xlsx",
+                  package = "spatiotemporaldynamics"),
+      sheet = 1
+   ) %>%
+   mutate(
+      wind_direction_degrees = case_when(
+         wind_direction == "N" ~ "0",
+         wind_direction == "NbE" ~ "11.25",
+         wind_direction == "NNE" ~ "22.5",
+         wind_direction == "NEbN" ~ "33.75",
+         wind_direction == "NE" ~ "45",
+         wind_direction == "NEbE" ~ "56.25",
+         wind_direction == "ENE" ~ "67.5",
+         wind_direction == "EbN" ~ "73.5",
+         wind_direction == "E" ~ "90",
+         wind_direction == "EbS" ~ "101.2",
+         wind_direction == "ESE" ~ "112.5",
+         wind_direction == "SEbE" ~ "123.8",
+         wind_direction == "SE" ~ "135.1",
+         wind_direction == "SEbS" ~ "146.3",
+         wind_direction == "SSE" ~ "157.6",
+         wind_direction == "SbE" ~ "168.8",
+         wind_direction == "S" ~ "180",
+         wind_direction == "SbW" ~ "191.2",
+         wind_direction == "SSW" ~ "202.5",
+         wind_direction == "SWbS" ~ "213.8",
+         wind_direction == "SW" ~ "225",
+         wind_direction == "SWbW" ~ "236.2",
+         wind_direction == "WSW" ~ "247.5",
+         wind_direction == "WbS" ~ "258.8",
+         wind_direction == "W" ~ "270",
+         wind_direction == "WbN" ~ "281.2",
+         wind_direction == "WNW" ~ "292.5",
+         wind_direction == "NWbW" ~ "303.8",
+         wind_direction == "NW" ~ "315",
+         wind_direction == "NWbN" ~ "326.2",
+         wind_direction == "NNW" ~ "337.5",
+         wind_direction == "NbW" ~ "348.8",
+         TRUE ~ wind_direction
+      )
+   ) %>%
+   mutate(wind_direction_degrees = as.numeric(wind_direction_degrees)) %>%
+   rename(date = Date, location = Location)
+save(wind_direc_dat, file = "../data/wind_direc_dat.rda")
+
+```
+
+### Join wind speed and wind direction data 
+
+```{r join-data}
+# Import wind speed data
+wind_speed_dat <-
+   read_excel(
+      system.file("extdata", "WindSpeedData.xlsx",
+                  package = "spatiotemporaldynamics"),
+      sheet = 1
+   ) 
+   
+   ### Join wind speed and wind direction data
+   wind_dat <- left_join(wind_speed_dat, wind_direc_dat) %>%
+   select(-date, -wind_direction)
+```
+
+### Plot wind rose
 
 ```{r plot-wind-rose,  message=FALSE, warning=FALSE}
 fig_3 <-
