Spelling and affiliation corrections

--- a/vignettes/Spatiotemporal_development_GAMs.Rmd
+++ b/vignettes/Spatiotemporal_development_GAMs.Rmd
@@ -10,6 +10,8 @@ vignette: >
   %\VignetteDepends{broom}
   %\VignetteDepends{mgcv}
   %\VignetteDepends{mgcViz}
+  %\VignetteDepends{ggpubr}
+  %\VignetteDepends{lubridate}
 ---
 
 ```{r setup, include=FALSE}
