--- a/vignettes/Spatiotemporal_development_GAMs.Rmd
+++ b/vignettes/Spatiotemporal_development_GAMs.Rmd
@@ -11,6 +11,7 @@ vignette: >
   %\VignetteDepends{mgcv}
   %\VignetteDepends{ggpubr}
   %\VignetteDepends{lubridate}
+  %\VignetteDepends{tidyverse}
 ---
 
 ```{r setup, include=FALSE}
