--- a/vignettes/Spatiotemporal_development_GAMs.Rmd
+++ b/vignettes/Spatiotemporal_development_GAMs.Rmd
@@ -53,8 +53,9 @@ dat <-
 str(dat)
 ```
 
-### Combine direction & location columns to get information on whether the rate of disease progress was signficantly faster in quadrats located in a particular direction  
+### Combine direction & location columns
 
+This provides information on whether the rate of disease progress was significantly faster in quadrats located in a particular direction.
 
 ```{r combine-location-and-direction-column}
 dat<-
@@ -63,7 +64,7 @@ dat<-
 
 ## Prepare data to fit GAMs
 
-Assign variables to the correct classes
+Assign variables to the correct classes.
 
 ```{r prepare-data}
 cols_1 <- c("location", "quadrat", "direction", "direc_loc")
@@ -78,7 +79,7 @@ sapply(dat, class)
 
 ## Fit univariate GAMs
 
-Use 'set.seed()' for reproducibility purposes
+Use `set.seed()` for reproducibility purposes
 
 ```{r set-seed, echo=TRUE}
 set.seed(42)
